--- a/Fabrikam Food/Fabrikam_Food/Views/MenuListPage.xaml
+++ b/Fabrikam Food/Fabrikam_Food/Views/MenuListPage.xaml
@@ -3,8 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Fabrikam_Food.Views.MenuListPage">
   <StackLayout>
-    <Button Text="View Menu" TextColor="White" BackgroundColor="Red" Clicked="ViewMenu_Clicked" />
-    <ListView x:Name="MenuList" HasUnevenRows="True">
+    <Button x:Name="MenuButton" Text="View Menu" TextColor="White" BackgroundColor="Red" Clicked="ViewMenu_Clicked" />
+    <Label x:Name="MenuLabel" Text =" Menu " HorizontalTextAlignment="Center" FontSize="30"></Label>
+    <Label x:Name="WaitLabel" Text ="Please wait while we ask our chefs ... "
+           HorizontalTextAlignment="Center"></Label>
+    <Label x:Name="EntreeLabel" Text ="Entrées"
+           HorizontalTextAlignment="Center" FontSize="20"></Label>
+    <ListView x:Name="EntreeList" HasUnevenRows="True">
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
@@ -13,13 +18,74 @@
                 <RowDefinition Height="Auto" />
               </Grid.RowDefinitions>
               <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="25*" />
-                <ColumnDefinition Width="75*" />
-                <ColumnDefinition Width="15*" />
+                <ColumnDefinition Width="0.85*" />
+                <ColumnDefinition Width="0.15*" />
               </Grid.ColumnDefinitions>
-              <Label Grid.Column="1" Text="{Binding Name}"/>
-              <Label Grid.Column="0" Text="{Binding Type}"/>
-              <Label Grid.Column="2" Text="{Binding Price}"/>
+              <Label Grid.Column="0" Text="{Binding Name}" HorizontalTextAlignment="Center"/>
+              <Label Grid.Column="1" Text="{Binding Price}" HorizontalTextAlignment="Center"/>
+            </Grid>
+          </ViewCell>
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+    <Label x:Name="SideLabel" Text ="Sides"
+       HorizontalTextAlignment="Center" FontSize="20"></Label>
+    <ListView x:Name="SideList" HasUnevenRows="True">
+      <ListView.ItemTemplate>
+        <DataTemplate>
+          <ViewCell>
+            <Grid>
+              <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+              </Grid.RowDefinitions>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.85*" />
+                <ColumnDefinition Width="0.15*" />
+              </Grid.ColumnDefinitions>
+              <Label Grid.Column="0" Text="{Binding Name}" HorizontalTextAlignment="Center"/>
+              <Label Grid.Column="1" Text="{Binding Price}" HorizontalTextAlignment="Center"/>
+            </Grid>
+          </ViewCell>
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+    <Label x:Name="MainLabel" Text ="Mains"
+   HorizontalTextAlignment="Center" FontSize="20"></Label>
+    <ListView x:Name="MainList" HasUnevenRows="True">
+      <ListView.ItemTemplate>
+        <DataTemplate>
+          <ViewCell>
+            <Grid>
+              <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+              </Grid.RowDefinitions>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.85*" />
+                <ColumnDefinition Width="0.15*" />
+              </Grid.ColumnDefinitions>
+              <Label Grid.Column="0" Text="{Binding Name}" HorizontalTextAlignment="Center"/>
+              <Label Grid.Column="1" Text="{Binding Price}" HorizontalTextAlignment="Center"/>
+            </Grid>
+          </ViewCell>
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+    <Label x:Name="DessertLabel" Text ="Desserts"
+   HorizontalTextAlignment="Center" FontSize="20"></Label>
+    <ListView x:Name="DessertList" HasUnevenRows="True">
+      <ListView.ItemTemplate>
+        <DataTemplate>
+          <ViewCell>
+            <Grid>
+              <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+              </Grid.RowDefinitions>
+              <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.85*" />
+                <ColumnDefinition Width="0.15*" />
+              </Grid.ColumnDefinitions>
+              <Label Grid.Column="0" Text="{Binding Name}" HorizontalTextAlignment="Center"/>
+              <Label Grid.Column="1" Text="{Binding Price}" HorizontalTextAlignment="Center"/>
             </Grid>
           </ViewCell>
         </DataTemplate>
