--- a/Fabrikam Food/Fabrikam_Food/Views/HomePage.xaml
+++ b/Fabrikam Food/Fabrikam_Food/Views/HomePage.xaml
@@ -4,7 +4,7 @@
              x:Class="Fabrikam_Food.Views.HomePage">
   <StackLayout>
     <StackLayout VerticalOptions="CenterAndExpand">
-      <Label Text="Welcome to Fabrikam Food! Please sign in for a more personalized experience!"></Label>
+      <Label x:Name="LoginDescription" Text="Welcome to Fabrikam Food! Please sign in for a more personalized experience!" HorizontalTextAlignment="Center"></Label>
       <Button x:Name="loginButton" Text="Sign in using facebook account" MinimumHeightRequest="30" Clicked="loginButton_Clicked" />
     </StackLayout>
     
